# formica

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build.sh  helloworld
src/: editor.cpp  editor.h  filetree.cpp  filetree.h  linkparser.cpp  linkparser.h  main.cpp  mainwindow.cpp  mainwindow.h  preferencesdialog.cpp  preferencesdialog.h  search.cpp  search.h  settings.cpp  settings.h  vaultdialog.cpp  vaultdialog.h  vaultmanager.cpp  vaultmanager.h
